Mod spelling @main.tex

--- a/main.tex
+++ b/main.tex
@@ -834,7 +834,7 @@ will cause cache misses and thus longer time to fetch from outside of the
 cache. This increase in time can be seen at around 776MB, which indicates to us
 that this is the relative size of the file cache.
 
-Overall, our methodology was successful in helping us attain the information we required. However, to pinpoint the size of the cache more clearly, future experiments will benefit form decreasing the rate in which we are increasing the file sizes. As vague as our estimates may have been, our estimates were accurate relative to the information attained from the experiment. The experiment does, however, give us a fairly loose range from which we can expect our cache size to be.
+Overall, our methodology was successful in helping us attain the information we required. However, to pinpoint the size of the cache more clearly, future experiments will benefit from decreasing the rate in which we are increasing the file sizes. As vague as our estimates may have been, our estimates were accurate relative to the information attained from the experiment. The experiment does, however, give us a fairly loose range from which we can expect our cache size to be.
 
 \subsection{File read time}
 
