--- a/main.tex
+++ b/main.tex
@@ -957,11 +957,10 @@ The experiments were split accordingly:\\
 Size of file cache - Boyuan\\
 File read time - Boyuan\\
 Remote file read time - Qiheng \\
-Contention - Dexin\\
+Contention - Qiheng\\
 
 The time we spent is:\\
 Boyuan Qin: 20 + hours\\
-Dexin Qi: 3 hours\\
 Qiheng Wang:
 
 %============================= section ==========================%
